Made images in carousel have fixed height to prevent layout shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,4 +9,5 @@
 
 * {
   -webkit-tap-highlight-color: transparent;
+  font-family: "Cabin", sans-serif;
 }
